# jingdong_financial

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yaml  kubernetes.yaml  manage.py  manager.py  pyproject.toml  requirements.txt
.circleci/: config.yml
api_server/: __init__.py  fastapi_app.py  gunicorn.conf.py
api_server/resources/: __init__.py  demo.py  gold.py  music.py
app/: __init__.py  celery_app.py  dependencies.py  flask_app.py  gunicorn_app.py
app/constants/: auth.py  code_map.py  enum.py
app/exceptions/: __init__.py  base.py  client.py
app/handlers/: apollo.py  auth.py  cache.py  error_handler.py  migrate.py  oauth2_sso.py  pagination.py
app/models/: __init__.py  base.py  gold.py  music.py  test.py
app/models/mixin/: __init__.py
app/resources/: __init__.py  config.py  gold.py  music.py  test.py  user.py
app/schemas/: test.py
app/services/: gold.py  hospital.py  test.py
app/services/music/: meta.py  youtube.py
app/tasks/: __init__.py
app/tasks/async_tasks/: refresh_config_task.py  test_task.py
app/tasks/schedule_tasks/: daily_do_task.py  gold_task.py  hospital_reserve_task.py  music_task.py
app/utils/: common.py
app/utils/view/: default.py  language.py  response.py
celery_tasks/: __init__.py  celery_app.py
celery_tasks/async_tasks/: __init__.py
celery_tasks/schedule_tasks/: __init__.py  gold_task.py  hospital_reserve_task.py  music_task.py  refresh_clash_task.py
configs/: config.template  settings.yaml
docker/: Dockerfile  app  app.conf  supervisord.conf  syslog-ng.conf
infra/: __init__.py
infra/configs/: log.ini
infra/constant/: __init__.py  code_map.py
infra/decorator/: trace.py
infra/dependencies/: __init__.py  auth.py  celery.py  config.py  migration.py  rdb.py  redis_client.py  registry.py
infra/enums/: __init__.py  common.py  gold.py  status_code.py
infra/exceptions/: __init__.py  base.py  common.py  http.py
infra/handlers/: __init__.py
infra/handlers/http/: __init__.py  error.py
infra/handlers/json/: __init__.py  encoder.py
infra/handlers/logging/: __init__.py  logger.py
infra/middlewares/: __init__.py  http.py
infra/models/: __init__.py  base.py  gold.py  music.py  test.py
infra/models/bo/: music.py
infra/models/mixin/: __init__.py
infra/services/: gold.py  hospital.py
infra/services/music/: meta.py  youtube.py
infra/typing/: __init__.py
infra/utils/: __init__.py  common.py  network.py
migrations/: migration_prod_1.py
static/release/: index.html
tests/: __init__.py  conftest.py
tests/test_apis/: test_basic_api.py  test_demo_api.py
tests/test_data/: settings.yaml
translations/: messages.pot
translations/en_US/LC_MESSAGES/: messages.mo  messages.po
translations/zh_CN/LC_MESSAGES/: messages.mo  messages.po
